$Id$

v0.71.4		12-Aug-2005


v0.71.3		13-Jun-2005 - 12-Aug-2005

	upgrade:
		Check mbsetup 7.n.3.14 and 7.n.3.15 settings.
		You may limit the mailhistory.html by setting 1.15.8
		Check mbsetup 1.13.4 and 1.13.5, they should be empty or point
		to valid and readable logfiles.
		See also the procedure for version 0.71.2 since now the chat
		code is made final!
		Enter setup menu 8.4 once and leave to clear unused data.

	mbselib.a:
		Added a function to clean subject lines from garbage, trailing
		spaces etc. to improve message linking.
		Made Internet BBS Chat final.

	mbcico:
		Added support for binkp GZ and BZ2 compression. Can be turned
		off per node. Only effective with originating calls. Incoming
		calls follow the remote.
		Increased binkp timeout from 180 to 300 seconds.

	mbsebbs:
		Added logging of remote host and terminal.
		Added subject line clean in several places.

	mbnewuser:
		Added logging of remote host and terminal.
		If the external editor is configured a new user gets the
		external editor by default instead of the internal editor.

	mball:
		If a valid WWW logfile is specified in menu 1.13.4 then http
		downloads are counted and the filedatabase is updated before
		the allfiles listings are created. Note that the very first
		time only a mark is placed in ~/var and nothing is done.

	mbfile:
		Dropped support for areas on CDrom.

	mbfido:
		Fixed commandline parser for mail recipients.
		Added subject line clean in several places.
		When message areas are autocreated, golded.inc and msg.txt are
		recreated for the external editors.
		The web stats can now limit the size of mailhistory.html
		The FileMgr command connects news nodes SR if set for the tic
		area.
		Removed some extra debug logging.

	mbmon:
		Made Internet BBS Chat final.

	mbtask:
		Made Internet BBS Chat final.
		Dropped support for file areas on CDrom.

	mbsetup:
		Added setup switches per node to disable PLZ or GZ and BZ2
		compression protocols with binkp.