@@ -276,6 +276,7 @@ void ForwardFile(fidoaddr Node, fa_list *sbl)
     free(queuedir);
     free(listfile);
     tidy_faddr(routeto);
+    Syslog('f', "forward done");
 }
 
 
